--- a/css/newTrip.css
+++ b/css/newTrip.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   width: full;
-  max-width: 25%;
+  max-width: 50%;
   margin: 0 auto;
   padding: 36px 24px 24px 24px;
-  gap: 8px;  
+  gap: 8px;
   background: linear-gradient(180deg, #329BFB 0%, #FFF 23.96%);
-  }
+}
 
 .titulo {
   color: #1F1F22;
@@ -74,6 +74,7 @@
   }
 
   .botonCancelar{
+    display: flex;
     padding: 8px 0px;
     justify-content: center;
     align-items: center;
@@ -81,6 +82,7 @@
     flex: 1 0 0;
     border-radius: 8px;
     border: 1px solid #874CFC;
+
   }
 
   .cancelar{
