--- a/css/newTrip.css
+++ b/css/newTrip.css
@@ -1,13 +1,23 @@
 #contenedorGeneral{
   display: flex;
+  min-width: 320px;
+  max-width: 500px;
+  width: 100%;
+  height: fit-content;
+  padding: 12px 12px 24px 12px;
   flex-direction: column;
-  width: full;
-  max-width: 50%;
-  margin: 0 auto;
-  padding: 36px 24px 24px 24px;
+  justify-content: center;
   gap: 8px;
+  
+}
+
+body{
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
   background: linear-gradient(180deg, #329BFB 0%, #FFF 23.96%);
 }
+
 
 .titulo {
   color: #1F1F22;
@@ -32,7 +42,6 @@
 
   .box{
     display: flex;
-    width: 100%;
     height: 105px;
     padding: 8px 12px;
     align-items: flex-start;
@@ -82,7 +91,10 @@
     flex: 1 0 0;
     border-radius: 8px;
     border: 1px solid #874CFC;
-
+    width: 100%;
+  }
+  a{
+    width: 100%;
   }
 
   .cancelar{
@@ -95,6 +107,7 @@
 
   .botonGuardar{
     padding: 8px 0px;
+    width: 100%;
     justify-content: center;
     align-items: center;
     gap: 10px;
