--- a/css/newTrip.css
+++ b/css/newTrip.css
@@ -58,7 +58,7 @@ body{
     padding: 8px 12px;
     align-items: center;
     gap: 10px;
-    align-self: stretch; 
+    align-self: stretch;
     border-radius: 8px;
     border: 1px solid #C2C2C2;
     background: #FFF; 
@@ -72,7 +72,7 @@ body{
   .contenedorForm{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: stretch;
     gap: 8px;
     align-self: stretch; 
   }
