--- a/css/login.css
+++ b/css/login.css
@@ -38,7 +38,7 @@
   line-height: normal;
 }
 .usuario input {
-  color: #c2c2c2;
+  color: #000000;
   font-size: 22px;
   font-style: normal;
   line-height: normal;
@@ -53,7 +53,7 @@
 }
 
 .contraseña input {
-  color: #c2c2c2;
+  color: #000000;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -116,4 +116,8 @@
   font-weight: 700;
   line-height: normal;
   text-decoration-line: underline;
+}
+
+::placeholder{
+  font-size: 14px;
 }
